<resources>
    <string name="app_name">噪音产生器！</string>
    <string name="about_intro">Make noise easily</string>
    <string name="activity_about">关于</string>
    <string name="about_developer">API 调用者：canwdev</string>
    <string name="about_info">本应用遵循 MaterialDesign\n警告：长时间播放噪音有风险，后果自负。</string>
    <string name="about_github">开源地址...</string>
    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>
    <string name="loading">加载中...</string>
    <string name="activity_settings">设置</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="auto_exit">自动退出</string>
    <string name="bgm_pause">BGM 暂停</string>
    <string name="bgm_playing">BGM 播放中</string>
    <string name="toast_adv_cycle_not_allowed">高级间隔循环不允许重复循环播放</string>
    <string name="toast_cycle_not_allowed">不允许重复循环播放，请到设置修改</string>
    <string name="settings_switch">开关 - 部分设置重启应用生效</string>
    <string name="settings_ra2sound">红警2菜单滑动音效</string>
    <string name="settings_drawer_sound">抽屉音效</string>
    <string name="settings_touch_sound">触摸条目时发声</string>
    <string name="settings_touch_sound_summary">触摸事件</string>
    <string name="settings_cycle">循环设置 - 长按条目循环播放</string>
    <string name="settings_allow_cycle">固定间隔允许重复</string>
    <string name="settings_interval">固定间隔时间 - 毫秒</string>
    <string name="settings_advanced_interval">高级间隔</string>
    <string name="settings_advi_short">高级间隔：短时间 - 秒</string>
    <string name="settings_advi_long">高级间隔：长时间 - 分</string>
    <string name="reset_soundpool">重置 SoundPool</string>
    <string name="force_close">强行停止</string>
    <string name="random">随机</string>
    <string name="stop">停止</string>
    <string name="stop_timer">定时停止</string>
    <string name="activity_stop_timer">定时停止播放</string>
    <string name="toast_press_again_to_exit">当前有播放任务，再按一次确认退出</string>
    <string name="toast_cycle_stop">循环播放停止</string>
    <string name="toast_cycleing">循环播放</string>
    <string name="toast_invalid_time">时间无效</string>
    <string name="professional">专业版</string>
    <string name="settings_detail_view_summary">点击条目显示详细信息</string>
    <string name="activity_detail_view">详细信息</string>
    <string name="restart_app">重启应用</string>
    <string name="settings_advi_times">高级间隔：最大重复次数</string>
    <string name="settings_advi_times_summary">随机播放1~最大次数次</string>
    <string name="activity_trouble_maker">声控模式</string>
    <string name="activity_trouble_maker_intro">此模式检测任何声音，然后根据灵敏度超限时会发出随机噪声。 这确保你始终是房间的主人！</string>
    <string name="choose_noise_set">选择噪音组</string>
    <string name="tm_interval_delay">发声间隔 - INTERVAL_DELAY</string>
    <string name="tm_enable_db_mode">分贝模式</string>
    <string name="tm_max_db">灵敏度阈值 - MAX_DB</string>
    <string name="tm_reference_amp">矫正 - referenceAmp</string>
    <string name="toast_default_bgm_set">已设为默认BGM，重启应用生效</string>
</resources>
