<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/def_margin"
    tools:mContext="com.canwdev.noise.SetTimeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:selectAllOnFocus="true"
            android:hint="@string/hour"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_minute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/minute"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/second"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Switch
        android:id="@+id/switch_autoExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/def_margin"
        android:layout_weight="0"
        android:checked="true"
        android:gravity="right|center"
        android:text="@string/auto_exit" />

    <Button
        android:id="@+id/button_ok"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@android:string/ok" />

</LinearLayout>
